# python_web_hw8_mongodb

./: README.md
hw_8/: pyproject.toml
hw_8/hw_8/: connect.py  create.py  decor.py  main.py  models.py  search.py
